// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`line utils highlightByLine with line numbers renders two elements per line: .euiCodeBlock__lineNumber and .euiCodeBlock__lineText 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "1",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 1,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "lineEnd": 1,
                "lineStart": 1,
                "type": "text",
                "value": "{",
              },
            ],
            "lineEnd": 1,
            "lineStart": 1,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 1,
            "lineStart": 1,
            "type": "text",
            "value": "
",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "2",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 2,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": "    ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": "\\"id\\"",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "property",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": ":",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "operator",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": " ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": "\\"1\\"",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "string",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": ",",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": "
",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "3",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 3,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 3,
            "lineStart": 3,
            "type": "text",
            "value": "  ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 3,
                "lineStart": 3,
                "type": "text",
                "value": "}",
              },
            ],
            "lineEnd": 3,
            "lineStart": 3,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
]
`;

exports[`line utils highlightByLine with line numbers with a custom starting number adds the starting lineNumber to each node 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "10",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 10,
          "style": Object {
            "inlineSize": 16,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "lineEnd": 10,
                "lineStart": 10,
                "type": "text",
                "value": "{",
              },
            ],
            "lineEnd": 10,
            "lineStart": 10,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 10,
            "lineStart": 10,
            "type": "text",
            "value": "
",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "11",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 11,
          "style": Object {
            "inlineSize": 16,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 11,
            "lineStart": 11,
            "type": "text",
            "value": "    ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 11,
                "lineStart": 11,
                "type": "text",
                "value": "\\"id\\"",
              },
            ],
            "lineEnd": 11,
            "lineStart": 11,
            "properties": Object {
              "className": Array [
                "token",
                "property",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 11,
                "lineStart": 11,
                "type": "text",
                "value": ":",
              },
            ],
            "lineEnd": 11,
            "lineStart": 11,
            "properties": Object {
              "className": Array [
                "token",
                "operator",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 11,
            "lineStart": 11,
            "type": "text",
            "value": " ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 11,
                "lineStart": 11,
                "type": "text",
                "value": "\\"1\\"",
              },
            ],
            "lineEnd": 11,
            "lineStart": 11,
            "properties": Object {
              "className": Array [
                "token",
                "string",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 11,
                "lineStart": 11,
                "type": "text",
                "value": ",",
              },
            ],
            "lineEnd": 11,
            "lineStart": 11,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 11,
            "lineStart": 11,
            "type": "text",
            "value": "
",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "12",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 12,
          "style": Object {
            "inlineSize": 16,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 12,
            "lineStart": 12,
            "type": "text",
            "value": "  ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 12,
                "lineStart": 12,
                "type": "text",
                "value": "}",
              },
            ],
            "lineEnd": 12,
            "lineStart": 12,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
]
`;

exports[`line utils highlightByLine with line numbers with annotations adds a custom annotation object after the lineNumber object 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "1",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "annotation": "Hello world",
            "lineNumber": 1,
            "type": "annotation",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 1,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "lineEnd": 1,
                "lineStart": 1,
                "type": "text",
                "value": "{",
              },
            ],
            "lineEnd": 1,
            "lineStart": 1,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 1,
            "lineStart": 1,
            "type": "text",
            "value": "
",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "2",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 2,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": "    ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": "\\"id\\"",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "property",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": ":",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "operator",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": " ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": "\\"1\\"",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "string",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": ",",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": "
",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "3",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 3,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 3,
            "lineStart": 3,
            "type": "text",
            "value": "  ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 3,
                "lineStart": 3,
                "type": "text",
                "value": "}",
              },
            ],
            "lineEnd": 3,
            "lineStart": 3,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
]
`;

exports[`line utils highlightByLine with line numbers with highlighted lines adds a class to the specified lines 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "1",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 1,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "lineEnd": 1,
                "lineStart": 1,
                "type": "text",
                "value": "{",
              },
            ],
            "lineEnd": 1,
            "lineStart": 1,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 1,
            "lineStart": 1,
            "type": "text",
            "value": "
",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-96t2rh-euiCodeBlock__lineText-isHighlighted",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "2",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 2,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": "    ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": "\\"id\\"",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "property",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": ":",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "operator",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": " ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": "\\"1\\"",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "string",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 2,
                "lineStart": 2,
                "type": "text",
                "value": ",",
              },
            ],
            "lineEnd": 2,
            "lineStart": 2,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": "
",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-96t2rh-euiCodeBlock__lineText-isHighlighted",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "type": "text",
                "value": "3",
              },
            ],
            "properties": Object {
              "aria-hidden": true,
              "className": Array [
                "css-5u6z3m-euiCodeBlock__lineNumber",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineNumber",
            "css-wlfghs-euiCodeBlock__lineNumberWrapper",
          ],
          "data-line-number": 3,
          "style": Object {
            "inlineSize": 8,
          },
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 3,
            "lineStart": 3,
            "type": "text",
            "value": "  ",
          },
          Object {
            "children": Array [
              Object {
                "lineEnd": 3,
                "lineStart": 3,
                "type": "text",
                "value": "}",
              },
            ],
            "lineEnd": 3,
            "lineStart": 3,
            "properties": Object {
              "className": Array [
                "token",
                "punctuation",
              ],
            },
            "tagName": "span",
            "type": "element",
          },
        ],
        "properties": Object {
          "className": Array [
            "euiCodeBlock__lineText",
            "css-rnrc4n-euiCodeBlock__lineText",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-8rt6cm-euiCodeBlock__line-hasLineNumbers",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
]
`;

exports[`line utils highlightByLine without line numbers renders a single .euiCodeBlock__line element per line 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "lineEnd": 1,
            "lineStart": 1,
            "type": "text",
            "value": "{",
          },
        ],
        "lineEnd": 1,
        "lineStart": 1,
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "lineEnd": 1,
        "lineStart": 1,
        "type": "text",
        "value": "
",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-yn676d-euiCodeBlock__line",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "lineEnd": 2,
        "lineStart": 2,
        "type": "text",
        "value": "    ",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": "\\"id\\"",
          },
        ],
        "lineEnd": 2,
        "lineStart": 2,
        "properties": Object {
          "className": Array [
            "token",
            "property",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": ":",
          },
        ],
        "lineEnd": 2,
        "lineStart": 2,
        "properties": Object {
          "className": Array [
            "token",
            "operator",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "lineEnd": 2,
        "lineStart": 2,
        "type": "text",
        "value": " ",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": "\\"1\\"",
          },
        ],
        "lineEnd": 2,
        "lineStart": 2,
        "properties": Object {
          "className": Array [
            "token",
            "string",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 2,
            "lineStart": 2,
            "type": "text",
            "value": ",",
          },
        ],
        "lineEnd": 2,
        "lineStart": 2,
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "lineEnd": 2,
        "lineStart": 2,
        "type": "text",
        "value": "
",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-yn676d-euiCodeBlock__line",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "lineEnd": 3,
        "lineStart": 3,
        "type": "text",
        "value": "  ",
      },
      Object {
        "children": Array [
          Object {
            "lineEnd": 3,
            "lineStart": 3,
            "type": "text",
            "value": "}",
          },
        ],
        "lineEnd": 3,
        "lineStart": 3,
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "euiCodeBlock__line",
        "css-yn676d-euiCodeBlock__line",
      ],
    },
    "tagName": "span",
    "type": "element",
  },
]
`;

exports[`shared utils nodeToHtml handles rendering custom annotation types 1`] = `
<div>
  <span
    className="hello-world"
    key="node-0-0"
  >
    <EuiCodeBlockAnnotation
      key="0"
      lineNumber={3}
    >
      Hello world
    </EuiCodeBlockAnnotation>
  </span>
</div>
`;

exports[`shared utils nodeToHtml recursively converts refactor nodes to React JSX 1`] = `
<div>
  <span
    className="hello-world"
    key="node-0-0"
  >
    Hello world
  </span>
</div>
`;
